- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.5.0
 - 
    None
 
- 
        eeb8d316f9e7ae2e5d09edecda5dcc6b03bdf9c3
 
Due to to some of the rpath changes done in QTBUG-31814 the macdeployqt doesn't deploy any of the quick plugin dependencies.
The behaviour can be easily reproduced by importing QtMultimedia in the QML files of the project.
- duplicates
 - 
                    
QTBUG-47673 macdeployqt fails for QtMultimedia QtQuick App
-         
     - Closed
 
 -         
 
- relates to
 - 
                    
QTBUG-47221 macdeployqt QtQuick QtWebEngine cause application crash on startup
-         
 - Closed
 
 -         
 - 
                    
QTBUG-47673 macdeployqt fails for QtMultimedia QtQuick App
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-46981 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 123185,4 | macdeployqt: fix QML import deps deployment | 5.5 | qt/qttools | Status: MERGED | +2 | 0 |