macdeployqt: fix QML import deps deployment

The plugin deployment step needs to run after QML
imports deployment in order to take frameworks
added by QML imports into account.

Move deployPlugins() down. Update deploymentInfo.
deployedFrameworks after deployQmlImports() has run.

Change-Id: I1d9ce827b1c0205ec37f027d03a9b4a2bb846801
Task-number: QTBUG-46981
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>